--- a/p6t2.html
+++ b/p6t2.html
@@ -15,7 +15,7 @@ body{
 h3{margin:12px;color:#333}
 
 #scanner{
-  width:356px;height:220px;
+  width:352px;height:220px;
   margin:10px auto;
   border-radius:18px;
   overflow:hidden;
@@ -31,7 +31,7 @@ video{width:100%;height:100%;object-fit:cover}
 }
 
 #out{
-  max-width:360px;
+  max-width:358px;
   margin:12px auto;
   background:#fff;
   border-radius:16px;
@@ -117,8 +117,8 @@ function f(x){
 }
 
 function calc(x){
-  // ต้องเป็นตัวเลขล้วนอย่างน้อย 20 หลัก
-  if(!/^\d{20,}$/.test(x)){
+  // ต้องเป็นตัวเลขล้วนอย่างน้อย 21 หลัก
+  if(!/^\d{21,}$/.test(x)){
     status.innerHTML="❌ รูปแบบข้อมูลไม่ถูกต้อง";
     out.innerHTML="";
     return;
@@ -135,7 +135,8 @@ function calc(x){
   let n6=parseInt(x.slice(11,13));
   let n7=parseInt(x.slice(13,15));
   let n8=parseInt(x.slice(15,17));
-  let n9=parseInt(x.slice(17));
+  let n9=parseInt(x.slice(17,20));
+  let n10=parseInt(x.slice(20));
 
   // คำนวณ
   let a1=(180-n1)/2;
@@ -151,7 +152,7 @@ function calc(x){
   let a10=n9*2/3;
 
   out.innerHTML=`
-  <div class="badge">ผลการเฉลย</div><br>
+  <div class="badge">เฉลยฉบับที่ ${n10}</div><br>
   ข้อ 1) ${f(a1)}°<br>
   ข้อ 2) ${f(a2)} ซม.<br>
   ข้อ 3) ${f(a3)} ม.<br>
@@ -168,5 +169,3 @@ function calc(x){
 </script>
 </body>
 </html>
-
-
