--- a/p6t2.html
+++ b/p6t2.html
@@ -15,7 +15,7 @@ body{
 h3{margin:12px;color:#333}
 
 #scanner{
-  width:352px;height:220px;
+  width:300px;height:200px;
   margin:10px auto;
   border-radius:18px;
   overflow:hidden;
@@ -31,7 +31,7 @@ video{width:100%;height:100%;object-fit:cover}
 }
 
 #out{
-  max-width:358px;
+  max-width:350px;
   margin:12px auto;
   background:#fff;
   border-radius:16px;
@@ -56,7 +56,7 @@ video{width:100%;height:100%;object-fit:cover}
 </head>
 
 <body>
-<h3>📷 สแกนบาร์โค้ด</h3>
+<h3>📸 สแกนบาร์โค้ด</h3>
 
 <div id="scanner">
   <video id="v" autoplay playsinline></video>
@@ -146,7 +146,7 @@ function calc(x){
   let a3=(n3+0.7)*4;
   let a4=180-103-n4;
   let a5=(n5*18)+(18*5);
-  let a61=2*22/7*n6*3/4;
+  let a61=2*22/7*n6*3/4+(n6*2);
   let a62=22/7*n6*n6*3/4;
   let a7=14*22*n7*2/3;
   let a8=3+(n8-1)*4;
