--- a/p6t2.html
+++ b/p6t2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>เฉลยข้อสอบปลายภาค2</title>
+<title>เฉลยข้อสอบคณิต ป.6 ปลายภาค2</title>
 
 <style>
 body{
@@ -15,7 +15,7 @@ body{
 h3{margin:12px;color:#333}
 
 #scanner{
-  width:350px;height:200px;
+  width:346px;height:200px;
   margin:10px auto;
   border-radius:18px;
   overflow:hidden;
@@ -56,7 +56,7 @@ video{width:100%;height:100%;object-fit:cover}
 </head>
 
 <body>
-<h3>📸 สแกนบาร์โค้ด</h3>
+<h3>📸 สแกนบาร์โค้ด ป.6</h3>
 
 <div id="scanner">
   <video id="v" autoplay playsinline></video>
@@ -171,4 +171,3 @@ function calc(x){
 </script>
 </body>
 </html>
-
